tests/ui/type/type-check/cannot_infer_local_or_vec_in_tuples.stderr
error[E0282]: type annotations needed
  --> $DIR/cannot_infer_local_or_vec_in_tuples.rs:2:17
   |
LL |     let (x, ) = (vec![], );
   |                 ^^^^^^^^^^ cannot infer type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
